--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   header {
-    @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:py-1;
+    @apply fixed top-0 z-50 flex items-center justify-between w-full px-4 py-1 transition-all lg:py-1 lg:px-10;
   }
 }
 
